samples/_failures_safe/1761522595_2f76a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_967bc978.c: In function ‘main’:
./samples/SAFE/__tmp_967bc978.c:159:21: error: expected expression at end of input
  159 |                     print_matrix(&
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_967bc978.c:159:21: error: too few arguments to function ‘print_matrix’
./samples/SAFE/__tmp_967bc978.c:61:6: note: declared here
   61 | void print_matrix(const Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_967bc978.c:159:21: error: expected declaration or statement at end of input
  159 |                     print_matrix(&
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_967bc978.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_967bc978.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_967bc978.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_967bc978.c:159:21: error: expected declaration or statement at end of input
